config_mgmt/gitops/base/jaeger/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jaeger
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: jaeger
  wildcardPolicy: None
